Version 0.8.7  June 1, 2000
---------------------------

JDO:     Informix JDBC driver. (Contributed by Santiago Arriaga <santiago.arriaga@catnet.com.mx>)


Version 0.8.6  May 24, 2000
---------------------------

XML:     Added support in the Marshaller to specify whether or not to marshal
         as an XML document, or just an XML fragment (default). Currently
         the only difference is the XML declaration is printed when marshalling
         as a document. I will add support for specifying the DOCTYPE. Of course
         since a SAX 1.0 DocumentHandler doesn't allow this, DOCTYPE and
         XML declarations will only be printed when a Writer is used.

XML:     Added support in the unmarshaller for better inheritence checking.
         If a FieldDescriptor is not found for an element, an attempt to
         obtain ClassDescriptor will occur for the given element. If found,
         another check will be performed to find a FieldDescriptor that
         describes a field which is a superclass of type described by the
         class descriptor. (see src/tests/xml/Inheritence.java)

JDO:     Added support for paramaterized type convertors. Currently supported is boolean
         to char convertor using T/F character values (e.g. char.01 or char.TF). More
         convertors and parameter specification will be added in 0.8.7. (Oleg Nitz
         <on@ibis.odessa.ua>)

JDO:     Fixed bug when related object is null and SQL_OTHER type is passed to JDBC
         driver; now properly passes type of identity field. (Reported by
         Eitan Suez <eitan@uptodata.com>).

JDO:     Fixed bug with dirty checking that caused lock to not be acquired and object
         to be deleted if modified, and now properly reporting modified value of object.

JDO:     Fixed the way in which null fields are handled, so has/delete methods are called
         if available, default value is used otherwise, setNull/wasNull are used on the
         JDBC record.
